--- a/postagem.ejs
+++ b/postagem.ejs
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Alice's Blog</title>
+    <title>Post</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-secondary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Alice's Blog</a>
+            <a class="navbar-brand" href="#">Milleny</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -46,36 +46,19 @@
             </div>
         </div>
 
-        <h2 class="mt-4">Posts</h2>
-        <ul class="list-group">
-            <% Postagens.forEach(postagem => { %>
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    <strong><%= postagem.mensagens %></strong>
-                    <a href="#" onclick="deletePostagem(<%= postagem.id %>)" class="delete-post">Excluir</a>
-                </li>
-            <% }); %>
-        </ul>
-    </div>
+        <h2>Posts</h2>
+   <ul>
+    <% Postagens.forEach(postagem => { %>
+      <li>
+          <strong><%= postagem.mensagens %></strong>
+          <a href="/delete2/<%= postagem.id %>">Delete</a> <!-- Alterado para usar o campo de identificação único -->
+      </li>
+  <% }); %>
+  
+      </ul>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        function deletePostagem(id) {
-            if (confirm("Tem certeza que deseja excluir esta postagem?")) {
-                fetch(`/deletePostagens/${id}`, { method: 'GET' })
-                    .then(response => {
-                        if (!response.ok) {
-                            throw new Error('Erro ao excluir a postagem');
-                        }
-                        // Atualizar a página após a exclusão
-                        location.reload();
-                    })
-                    .catch(error => {
-                        console.error(error.message);
-                        alert('Ocorreu um erro ao excluir a postagem');
-                    });
-            }
-        }
-    </script>
+
 </body>
+<div class="container-fluid">
+  </div>
 </html>
